# minecraft-clone

./: .gitignore  CMakeLists.txt  Makefile
include/glad/: glad.h
resources/shaders/: block_slection.frag  block_slection.vert  crosshair.frag  crosshair.vert  main.frag  main.vert  screen.frag  screen.vert  transparent.frag  transparent.vert  transparent_depth_test.frag
src/: arr_map_key.hpp  block.cpp  block.hpp  block_face.cpp  block_face.hpp  block_faces.hpp  block_faces_types.hpp  block_selection.cpp  block_selection.hpp  block_texture_atlas.cpp  block_texture_atlas.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  chunk_definitions.cpp  chunk_definitions.hpp  chunks.cpp  chunks.hpp  crosshair.cpp  crosshair.hpp  dyn_array.hpp  framebuffer.cpp  framebuffer.hpp  gl.cpp  gl.hpp  glad.c  index_buffer.hpp  main.cpp  perlin_noise.cpp  perlin_noise.hpp  player.cpp  player.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  stb_imp.cpp  (+20 more)
src/blocks/: biome_block.cpp  biome_block.hpp  block.cpp  block.hpp  different_biome_face_block.cpp  different_biome_face_block.hpp  different_face_block.cpp  different_face_block.hpp  drawable_block.cpp  drawable_block.hpp  simple_block.cpp  simple_block.hpp  simple_transparent.cpp  simple_transparent.hpp  transparent_drawable_block.cpp  transparent_drawable_block.hpp  water.cpp  water.hpp
